make 'show advanced options' option persist

--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -9,17 +9,17 @@
 <md-list-item md-no-ink>
   <p>{{:: 'ui.options.multiplayer.showAdvancedOptions' | translate }}</p>
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.showAdvancedOptions.tooltip' | translate }}</md-tooltip>
-  <md-checkbox ng-model="options.showAdvancedMPOptions" ng-change="options.applyState()"></md-checkbox>
+  <md-checkbox ng-model="options.data.values.showAdvancedMPOptions" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
-<md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+<md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
   <p><span class="mp-setting-highlight">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.alternateModloading' |
     translate }}</p>
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.alternateModloading.tooltip' | translate }}</md-tooltip>
   <md-checkbox ng-model="options.data.values.beammpAlternateModloading" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
-<md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+<md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
   <p><span class="mp-setting-highlight">EXPERIMENTAL</span> {{:: 'ui.options.multiplayer.disableInstabilityPausing' |
     translate }}</p>
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.disableInstabilityPausing.tooltip' | translate }}
@@ -40,14 +40,14 @@
     <md-checkbox ng-model="options.data.values.enableQueueAuto" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
-  <md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+  <md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
     <p>{{:: 'ui.options.multiplayer.queueAutoSkipRemote' | translate }}</p>
     <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueAutoSkipRemote.tooltip' | translate }}
     </md-tooltip>
     <md-checkbox ng-model="options.data.values.queueAutoSkipRemote" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
-  <md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+  <md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
     <p>{{:: 'ui.options.multiplayer.queueSkipUnicycle' | translate }}</p>
     <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueSkipUnicycle.tooltip' | translate }}</md-tooltip>
     <md-checkbox ng-model="options.data.values.queueSkipUnicycle" ng-change="options.applyState()"></md-checkbox>
@@ -66,7 +66,7 @@
   <md-checkbox ng-model="options.data.values.skipOtherPlayersVehicles" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
-<md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+<md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
   <p>Fade out vehicles as they get closer</p>
   <md-tooltip md-direction="right">Good when paired with disabled collisions</md-tooltip>
   <md-checkbox ng-model="options.data.values.fadeVehicles" ng-change="options.applyState()"></md-checkbox>
@@ -77,7 +77,7 @@
 <md-subheader class="md-no-sticky">{{:: 'ui.options.multiplayer.blobsTitle' | translate }}</md-subheader>
 
 <md-list-item md-no-ink>
-  <p><span class="mp-setting-highlight">NEW</span> {{:: 'ui.options.multiplayer.enableBlobs' | translate }}</p>
+  <p>{{:: 'ui.options.multiplayer.enableBlobs' | translate }}</p>
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.enableBlobs.tooltip' | translate }}</md-tooltip>
   <md-checkbox ng-model="options.data.values.enableBlobs" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
@@ -153,12 +153,12 @@
   <md-checkbox ng-model="options.data.values.nameTagShowDistance" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
-<md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+<md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
   <p>{{:: 'ui.options.multiplayer.nametagFade' | translate }}</p>
   <md-checkbox ng-model="options.data.values.nameTagFadeEnabled" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
-<div class="mp-setting-border" ng-show="options.data.values.nameTagFadeEnabled && options.showAdvancedMPOptions">
+<div class="mp-setting-border" ng-show="options.data.values.nameTagFadeEnabled && options.data.values.showAdvancedMPOptions">
   <md-list-item layout class="md-padding" style="padding-top:0; padding-bottom:0">
     <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.nametagFadeDistance.tooltip' | translate }}
     </md-tooltip>
@@ -184,7 +184,7 @@
 </div>
 
 <md-list-item md-no-ink>
-  <p><span class="mp-setting-highlight">NEW</span> {{:: 'ui.options.multiplayer.shortenNametags' | translate }}</p>
+  <p>{{:: 'ui.options.multiplayer.shortenNametags' | translate }}</p>
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.shortenNametags.tooltip' | translate }}</md-tooltip>
   <md-checkbox ng-model="options.data.values.shortenNametags" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
@@ -217,15 +217,15 @@
 
 
 
-<md-subheader class="md-no-sticky" ng-show="options.showAdvancedMPOptions">{{:: 'ui.options.multiplayer.others' |
+<md-subheader class="md-no-sticky" ng-show="options.data.values.showAdvancedMPOptions">{{:: 'ui.options.multiplayer.others' |
   translate }}</md-subheader>
 
-<md-list-item md-no-ink ng-show="options.showAdvancedMPOptions">
+<md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
   <p>{{:: 'ui.options.multiplayer.debugOutput' | translate }}</p>
   <md-checkbox ng-model="options.data.values.showDebugOutput" ng-change="options.applyState()"></md-checkbox>
 </md-list-item>
 
-<md-list-item layout class="md-padding" style="padding-top:0; padding-bottom:0" ng-show="options.showAdvancedMPOptions">
+<md-list-item layout class="md-padding" style="padding-top:0; padding-bottom:0" ng-show="options.data.values.showAdvancedMPOptions">
   <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.launcherPort.tooltip' | translate}}</md-tooltip>
   <p flex="70" bng-translate="ui.options.multiplayer.launcherPort"></p>
   <md-input-container style="padding-top:25px">
