Revised queue apply logic and added UI for it

--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -47,6 +47,12 @@
 		background-color:rgba(0, 0, 0, 0.65);
 		color: #FFFFFF;
 	}
+	#queue-block {
+		display:inline-block;
+		background-size: 200% 100%;
+		background-image: linear-gradient(to right, rgba(255, 100, 0, 0.8) 50%, transparent 0);
+		background-position: left;
+	}
 	</style>
 	<div class="outerDiv">
 		<div class="block" id="server-name-block" style="display: none;">
@@ -59,7 +65,7 @@
 			<span>Ping: <span id="Session-Ping">?</span></span>
 		</div>
 		<div class="block others-block" id="queue-block" style="display: none; padding: 0px" >
-			<button class="buttons" style="background-color: rgba(255, 100, 0, 0.8)" ng-click="applyQueue()">Events queued: <span id="Session-Queue" title="">0</span></button>
+			<button class="buttons" style="background-color: transparent" ng-click="applyQueue()">Events queued: <span id="Session-Queue" title="">0</span></button>
 		</div>
 		<div>
 			<button type="button" id="quit-button" name="button" class="buttons" ng-click="mpquit()">Quit</button>
