--- a/ui/modules/options/multiplayer.partial.html
+++ b/ui/modules/options/multiplayer.partial.html
@@ -40,6 +40,29 @@
     <md-checkbox ng-model="options.data.values.enableQueueAuto" ng-change="options.applyState()"></md-checkbox>
   </md-list-item>
 
+  <md-list-item md-no-ink>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueApplySpeed.tooltip' | translate }}</md-tooltip>
+    <p flex="50"><span class="mp-setting-highlight">NEW</span> {{:: 'ui.options.multiplayer.queueAutoSkipRemote' | translate }}</p>
+    <md-slider flex ng-model="options.data.values.queueApplySpeed" min="0" max="10" step="1" aria-label="_"
+      ng-change="options.applyState()">
+    </md-slider>
+    <span ng-if="options.data.values.uiUnitLength == 'imperial'" style="margin-left:15px">{{
+      (options.data.values.queueApplySpeed*2.23694).toFixed(1) }} mph</span>
+    <span ng-if="options.data.values.uiUnitLength != 'imperial'" style="margin-left:15px">{{
+      (options.data.values.queueApplySpeed*3.6).toFixed(1) }} km/h</span>
+    <span style="margin-left:5px">({{ (options.data.values.queueApplySpeed).toFixed(0) }} m/s)</span>
+
+  </md-list-item>
+
+  <md-list-item md-no-ink>
+    <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueApplyTimeout.tooltip' | translate }}</md-tooltip>
+    <p flex="50"><span class="mp-setting-highlight">NEW</span> {{:: 'ui.options.multiplayer.queueAutoSkipRemote' | translate }}</p>
+    <md-slider flex ng-model="options.data.values.queueApplyTimeout" min="0" max="20" step="1" aria-label="_"
+      ng-change="options.applyState()">
+    </md-slider>
+    <span style="margin-left:15px">{{ (options.data.values.queueApplyTimeout).toFixed(0) }}s</span>
+  </md-list-item>
+
   <md-list-item md-no-ink ng-show="options.data.values.showAdvancedMPOptions">
     <p>{{:: 'ui.options.multiplayer.queueAutoSkipRemote' | translate }}</p>
     <md-tooltip md-direction="right">{{:: 'ui.options.multiplayer.queueAutoSkipRemote.tooltip' | translate }}
