Remove username input and change text to a warning

--- a/ui/modules/multiplayer/login.partial.html
+++ b/ui/modules/multiplayer/login.partial.html
@@ -17,8 +17,7 @@
 				</div>
 			</form>
 			<form id="GuestContainer" style="display: none;">
-				<h2 class="text-white">Please enter a Username to play with.</h2>
-				<input type="text" id="guestUsername" placeholder="Username"/>
+				<h2 class="text-white">Playing as a guest may have some server restrictions, for the full experience we recommend using a registered account.</h2>
 				<div style="display:flex; align-content: space-evenly;">
 					<md-button class="button" ng-click="guestLogin()">Play</md-button>
 					<md-button class="button" ng-click="switchConnection()">I have an account</md-button>
