--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -1,83 +1,36 @@
 <link type="text/css" rel="stylesheet" href="/ui/modules/multiplayer/multiplayer.css">
 
 <div id="LoadingServer" style="display: none;">
-    <div id="LoadingBody">
-		<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closeLoadingPopup()"> X </md-button>
-        <h1>{{:: 'ui.multiplayer.connecting' | translate}}</h1>
-        <span id="LoadingStatus">{{:: 'ui.multiplayer.loading' | translate}}</span>
-    </div>
+  <div id="LoadingBody">
+    <md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class=""
+      ng-click="multiplayer.closeLoadingPopup()"> X </md-button>
+    <h1>{{:: 'ui.multiplayer.connecting' | translate}}</h1>
+    <span id="LoadingStatus">{{:: 'ui.multiplayer.loading' | translate}}</span>
+  </div>
 </div>
 
 <div id="addCustomFav" style="display: none;">
-	<md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class="" ng-click="multiplayer.closePopup()"> X </md-button>
-	<md-list-item layout class="md-padding">
-		<h1>Add custom server :</h1>
-	</md-list-item>
-	<center>
-		<input type="text" id="customFavName" name="customFavName" placeholder="Custom server"/>
-		<input type="text" id="customFavIP" name="customFavIP" placeholder="Server IP"/>
-		<input type="text" id="customFavPort" name="customFavPort" placeholder="Server port" value="30814"/>
-		<md-button class="button" ng-click="multiplayer.addCustomServer()">Save</md-button>
-	</center>
+  <md-button style="right:0; top:0; margin:0;" class="button close-button" ng-class=""
+    ng-click="multiplayer.closePopup()"> X </md-button>
+  <md-list-item layout class="md-padding">
+    <h1>Add custom server :</h1>
+  </md-list-item>
+  <center>
+    <input type="text" id="customFavName" name="customFavName" placeholder="Custom server" />
+    <input type="text" id="customFavIP" name="customFavIP" placeholder="Server IP" />
+    <input type="text" id="customFavPort" name="customFavPort" placeholder="Server port" value="30814" />
+    <md-button class="button" ng-click="multiplayer.addCustomServer()">Save</md-button>
+  </center>
 </div>
 
-<md-content id="back" layout="column">
+<div id="back" layout="column" class="main-container">
+  <div flex style="position: relative;">
+    <md-content ui-view class="container" style="background: transparent; overflow: auto;"></md-content>
+  </div>
 
-    <md-toolbar class="md-primary" id="top-bar">
-        <md-list-item layout="row" class="">
-            <h1 class="md-toolbar-tools" style="width:auto;">{{:: 'ui.multiplayer.multiplayer' | translate}}</h1>
-            <p id="topRightStatus" style="text-align:right; margin-right:10px;"></p>
-			<!--<md-button id="launcher-connect-button" class="button" ng-click="multiplayer.resetLauncherConnection()">Connect to launcher</md-button>-->
-        </md-list-item>
-    </md-toolbar>
+  <div ui-view="edit" layout="column"></div>
+</div>
 
-    <div flex layout="row" style="overflow: auto;">
-      <md-content layout="column" id="left-menu">
-        <md-button id="servers-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.servers') !== -1)}" ui-sref="menu.multiplayer.servers" style="text-align:left;">
-          <md-icon class="material-icons">desktop_windows</md-icon>
-		      {{:: 'ui.multiplayer.servers' | translate}}
-        </md-button>
-
-        <md-button id="recent-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.recent') !== -1)}" ui-sref="menu.multiplayer.recent" style="text-align:left;">
-          <md-icon class="material-icons">alarm</md-icon>
-				  {{:: 'ui.multiplayer.recent' | translate}}
-        </md-button>
-
-        <md-button id="favorites-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.favorites') !== -1)}" ui-sref="menu.multiplayer.favorites" style="text-align:left;">
-          <md-icon class="material-icons">star</md-icon>
-				  {{:: 'ui.multiplayer.favorites' | translate}}
-        </md-button>
-
-        <md-button id="direct-connect-btn" ng-class="{'md-primary md-raised': (multiplayer.stateName.indexOf('multiplayer.direct') !== -1)}" ui-sref="menu.multiplayer.direct" style="text-align:left;">
-          <md-icon class="material-icons">web</md-icon>
-				  {{:: 'ui.multiplayer.direct_connect' | translate}}
-        </md-button>
-
-        <md-button id="forum-btn" onclick="openForumLink()" ng-class="" style="text-align:left;">
-          <md-icon class="material-icons">web</md-icon>
-				  {{:: 'ui.multiplayer.forum' | translate}}
-        </md-button>
-
-
-	    <md-divider></md-divider>
-	    
-	    <div flex="" style="max-height: none;"></div>
-	    
-        <md-button id="direct-connect-btn" ng-click="logout()" class="md-raised md-accent" style="text-align:left;">
-          <md-icon class="material-icons">exit_to_app</md-icon>
-				  Logout
-        </md-button>
-      </md-content>
-
-      <div flex style="position: relative;">
-        <md-content ui-view class="container" style="background: transparent; overflow: auto;"></md-content>
-      </div>
-
-      <div ui-view="edit" layout="column"></div>
-    </div>
-</md-content>
-
-<!-- jQuery -->
 <script>
   //if (window.module) module = window.module;
 </script>
