--- a/ui/modules/multiplayer/recent.partial.html
+++ b/ui/modules/multiplayer/recent.partial.html
@@ -8,11 +8,14 @@
 <!--<script src="./modules/multiplayer/js/dataTables/jquery.dataTables.min.js"></script>
 <script src="./modules/multiplayer/js/dataTables/dataTables.bootstrap.min.js"></script>-->
 
-<md-content>
+<div id="primary-div">
 	<div layout="row" layout-padding="">
-			<input ng-model="multiplayermenu.searchText" ng-change="multiplayermenu.repopulate();" type="text" id="search" name="search" placeholder="Search"/>
-			<md-button id="refresh-button" class="button servers-button" ng-class="" ng-click="multiplayer.refreshList()">{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
-			<md-button id="clear-button" class="button servers-button" ng-class="" ng-click="multiplayer.clearRecents()">Clear recents</md-button>
+		<input ng-model="multiplayermenu.searchText" ng-change="multiplayermenu.repopulate();" type="text" id="search"
+			name="search" placeholder="Search" />
+		<md-button id="refresh-button" class="button servers-button" ng-class="" ng-click="multiplayer.refreshList()">
+			{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
+		<md-button id="clear-button" class="button servers-button" ng-class="" ng-click="multiplayer.clearRecents()">
+			Clear recents</md-button>
 
 		<md-divider></md-divider>
 	</div>
@@ -33,8 +36,8 @@
 
 	<div id="footer">
 		<span id="TEMPAREA" style="display:none;"></span>
-  </div>
-</md-content>
+	</div>
+</div>
 
 <script>
 
