Some changes to the navbar and other stuff

--- a/ui/entrypoints/main_0.26/index.html
+++ b/ui/entrypoints/main_0.26/index.html
@@ -121,7 +121,6 @@
 
   <link type="text/css" rel="stylesheet" href="/ui/entrypoints/main/main.css">
   <link type="text/css" rel="stylesheet" href="/ui/lib/ext/keys.css">
-  <link type="text/css" rel="stylesheet" href="/ui/modules/mp_mainmenu/mainmenu.css">
   <link type="text/css" rel="stylesheet" href="/ui/modules/mainmenu/mainmenu.css">
   <link type="text/css" rel="stylesheet" href="/ui/modules/menu/menu.css" />
   <link rel="stylesheet" type="text/css" href="/ui/modules/introPopup/intro.css" />
@@ -205,7 +204,7 @@
   <!-- fullscreen DEFAULT view -->
   <div ng-cloak class="UI-Flex-Wrapper" style="position: absolute; top:0; left:0; right:0; bottom:0; z-index: var(--zorder_index_fullscreen_default); display: flex; flex-direction: column; align-items: stretch; justify-content: start;">
     <!-- Menu Dashbar goes here -->
-    <dash-menu ng-controller="MenuController as menuCtrl" ng-if="('menu' | includedByState) && (($state.current.name !== 'menu.mainmenu') || !app.mainmenu)">Dash menu goes here</dash-menu>
+    <dash-menu ng-controller="MenuController as menuCtrl" ng-if="('menu' | includedByState) && (($state.current.name == 'menu.bngmainmenu') || !app.mainmenu)">Dash menu goes here</dash-menu>
 
     <div class="fullscreencontent" style="flex: 1 1 auto; position: relative; pointer-events: none;" ng-class="app.transitionAnimation">
       <bng-career-banner></bng-career-banner>
@@ -218,10 +217,9 @@
       <menu-content style="position:absolute !important;top:0;right:0;bottom:0;left:0; z-index: var(--zorder_index_menucontent);" ui-view></menu-content>
     </div>
 
-    <div class="navbar" ng-if="(app.ingame && 'menu' | includedByState) && $state.current.name !== 'menu.mainmenu'">
-      <!-- menuNavBar contents -->
+    <!-- <div class="navbar" ng-if="(app.ingame && 'menu' | includedByState) && $state.current.name !== 'menu.mainmenu'">
       <menu-navbar></menu-navbar>
-    </div>
+    </div> -->
   </div>
 
   <main-background class="fancyBackgroundFill" ng-if="app.mainmenu"></main-background>
