--- a/ui/modules/mp_mainmenu/drive/mainmenu.html
+++ b/ui/modules/mp_mainmenu/drive/mainmenu.html
@@ -1,3 +1,5 @@
+<link type="text/css" rel="stylesheet" href="/ui/modules/mp_mainmenu/mainmenu.css">
+
 <div ng-if="!app.shipping"
     style="font-weight:bold;width:420px;height:auto;position:fixed;padding-left:5px;top:5px;left:5px;font-size:60px;font-family:Roboto;margin:0;background-color:rgba(0,0,0,0.6);color:white;border-radius:0px 0px 10px 0px;">
     <md-icon class="material-icons">bug_report</md-icon>DEV RELEASE
