--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -8,6 +8,7 @@
 <!--<script src="./modules/multiplayer/js/dataTables/jquery.dataTables.min.js"></script>
 <script src="./modules/multiplayer/js/dataTables/dataTables.bootstrap.min.js"></script>-->
 
+<mp-menu-navbar></mp-menu-navbar>
 <div id="primary-div">
 	<div layout="row" layout-padding="">
 		<input ng-model="multiplayermenu.searchText" ng-change="multiplayermenu.repopulate();" type="text" id="search"
