--- a/ui/modules/mp_mainmenu/drive/mainmenu.html
+++ b/ui/modules/mp_mainmenu/drive/mainmenu.html
@@ -54,9 +54,9 @@
                 </div>
             </div>
             <div class="flex-items">
-                <div class="menu-cards">
+                <div class="menu-cards" ng-class="" ng-style="">
                     <!-- Server Hosting Card -->
-                    <div class="clickable menu-card" ng-click="openBrowser('https://wiki.beammp.com/en/home/server-installation')">
+                    <div class="clickable menu-card" ng-click="openBrowser('https://wiki.beammp.com/en/home/server-installation');" tabindex="false">
                         <div class="menu-card-title">
                             <h1>Server Hosting</h1>
                         </div>
@@ -66,7 +66,7 @@
                     </div>
 
                     <!-- Server Resource Card -->
-                    <div class="clickable menu-card" ng-click="openBrowser('https://wiki.beammp.com/en/Scripting/new-lua-scripting')">
+                    <div class="clickable menu-card" ng-click="openBrowser('https://wiki.beammp.com/en/Scripting/new-lua-scripting')" tabindex="false">
                         <div class="menu-card-title">
                             <h1>Server Scripting</h1>
                         </div>
@@ -76,7 +76,7 @@
                     </div>
 
                     <!-- Server Resource Card -->
-                    <div class="clickable menu-card" ng-click="openBrowser('https://wiki.beammp.com/en/Scripting/client_scripting')">
+                    <div class="clickable menu-card" ng-click="openBrowser('https://wiki.beammp.com/en/Scripting/client_scripting')" tabindex="false">
                         <div class="menu-card-title">
                             <h1>Client Scripting</h1>
                         </div>
@@ -86,7 +86,7 @@
                     </div>
 
                     <!-- Donation Card -->
-                    <div class="clickable menu-card" ng-click="openBrowser('https://www.patreon.com/BeamMP')">
+                    <div class="clickable menu-card" ng-click="openBrowser('https://www.patreon.com/BeamMP')" tabindex="false">
                         <div class="menu-card-title">
                             <h1>Support us</h1>
                         </div>
