--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -63,6 +63,16 @@
 			width: 25px;
 			float: right;
 		}
+		.player-button {
+			color: white;
+			transition: 0.20s;
+			background-color: rgba(0, 0, 0, 0);
+			cursor:pointer;
+		}
+		.player-button:hover {
+			background-color: rgba(0, 0, 0, 0.65);
+			color: #FFFFFF;
+		}
 	</style>
 	<div id="main-container">
 		<div id="plist-container">
