old UI code cleanup

--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -59,7 +59,7 @@
 			<span id="Session-Status"></span>
 		</div>
 		<div class="block others-block">
-			<span>Players: <span id="Session-PlayerCount">0/10</span></span>
+			<span>Players: <span id="Session-PlayerCount"> ? </span></span>
 		</div>
 		<div class="block others-block">
 			<span>Ping: <span id="Session-Ping">?</span></span>
