--- a/ui/modules/vehicleconfig/partial.parts.html
+++ b/ui/modules/vehicleconfig/partial.parts.html
@@ -161,7 +161,7 @@
         {{:: 'ui.common.reset' | translate}}
       </md-button>
       <md-button ng-hide="!vehConf_parts.isMPSession" ng-click="vehConf_parts.mpapply()" md-no-ink class="md-raised md-primary">
-        {{:: 'ui.common.sync' | translate}}
+        {{:: 'ui.common.multiplayer.sync' | translate}}
       </md-button>
     </div>
 
