--- a/ui/modules/multiplayer/login.partial.html
+++ b/ui/modules/multiplayer/login.partial.html
@@ -1,6 +1,6 @@
 <link type="text/css" rel="stylesheet" href="modules/multiplayer/multiplayer.css">
 
-
+<mp-menu-navbar></mp-menu-navbar>
 <div style="height:100%; background-color: rgba(0, 0, 0, 0.50);">
 	<div class="offset-div">
 		<div id="MultiplayerLoginBody"
