--- a/ui/modules/multiplayer/tos.partial.html
+++ b/ui/modules/multiplayer/tos.partial.html
@@ -1,106 +1,119 @@
-<div style=" display: flex; width: 100%;">
-  <div class="md-padding" style="display:flex; max-height: 1000px; min-width: 500px; width: 70%; max-width: 80%; margin: 2.5% auto; background-color: rgba(255, 255, 255, 0.85); color: rgb(62, 62, 62); overflow-y: scroll">
-    <style>
-      md-radio-button .md-container {
-        display:none;
-      }
+<style>
+  md-radio-button .md-container {
+    display: none !important;
+    border: 0 !important;
+    box-shadow: none !important;
+  }
 
-      .onlineDialogue .md-button {
-        color: rgba(0, 0, 0, 0.87);
-        background-color: white;
-        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-      }
+  .onlineDialogue .md-button {
+    color: rgba(0, 0, 0, 0.87);
+    background-color: white;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  }
 
-      .onlineDialogue .md-button:hover {
-        background-color:rgba(83, 79, 76, 0.8);
-        color:white;
-      }
+  .onlineDialogue .md-button:hover {
+    background-color: rgba(83, 79, 76, 0.8);
+    color: white;
+  }
 
-      .onlineDialogue .md-button.affirmative:hover {
-        background-color:rgba(255, 102, 0, 0.555);
-        color:white;
-      }
+  .onlineDialogue .md-button.affirmative:hover {
+    background-color: rgba(255, 102, 0, 0.555);
+    color: white;
+  }
 
-      .onlineDialogue .md-button.md-raised:not([disabled]) {
-        background-color:rgba(83, 79, 76, 1.0);
-        color:white;
-      }
+  .onlineDialogue .md-button.md-raised:not([disabled]) {
+    background-color: rgba(83, 79, 76, 1.0);
+    color: white;
+  }
 
-      .onlineDialogue .md-button.affirmative.md-raised:not([disabled]) {
-        background-color:rgb(255,102,0);
-        color:white;
-      }
+  .onlineDialogue .md-button.affirmative.md-raised:not([disabled]) {
+    background-color: rgb(255, 102, 0);
+    color: white;
+  }
 
-      ::-webkit-scrollbar {
-        width: 12px;
-      }
+  ::-webkit-scrollbar {
+    width: 12px;
+  }
 
-      md-radio-button .md-label {
-        margin-left:0;
-      }
+  md-radio-button .md-label {
+    margin-left: 0;
+  }
 
-      .onlineDialogue .md-button[disabled], .onlineDialogue .md-button[disabled]:hover {
-        background-color: rgba(98, 94, 91, 0.4) !important;
-        color: rgba(200, 200, 200, 0.75) !important;
-      }
-    </style>
-    <div style="position: relative; top: 50%; transform: translateY(-50%); width: 100%;">
+  .onlineDialogue .md-button[disabled],
+  .onlineDialogue .md-button[disabled]:hover {
+    background-color: rgba(98, 94, 91, 0.4) !important;
+    color: rgba(200, 200, 200, 0.75) !important;
+  }
+</style>
+
+<mp-menu-navbar></mp-menu-navbar>
+<div style="display: flex; justify-content: center; align-items: center; width:100%; height: 80%;">
+  <div style="background: var(--bg-secondary); width: 50%; margin: auto; border-radius: 10px; padding: 1em;">
     <div>
-      <h1>{{ 'ui.multiplayertos.title' | translate }}</h1>
-    </div>
-    <md-divider style="border-color: rgb(62, 62, 62);"></md-divider>
-    <h2>{{ 'ui.multiplayertos.tos' | translate }}</h2>
-    <div style="padding-bottom: 10px; display: inline-block; text-align: justify;">
-	  <span bng-translate="ui.multiplayertos.tos.description1"></span>
-	  <a href="http-external://forum.beammp.com/topic/94/terms-of-use-v1-0" ng-click="openExternalLink('https://forum.beammp.com/topic/94/terms-of-use-v1-0')">here</a>.
-	  <span bng-translate="ui.multiplayertos.tos.description2"></span>
-	</div>
-    <div style="display: flex;">
-      <span style="flex: 1 1;"></span>
-    <md-radio-group ng-model="tos" class="onlineDialogue">
-      <md-radio-button value="enable" class="md-button affirmative" ng-class="{'md-raised': tos === 'enable'}" aria-label="OK">
-        Yes
-      </md-radio-button>
-      <md-radio-button value="disable" class="md-button" ng-class="{'md-raised': tos === 'disable'}" aria-label="NoThanks">
-        No, thanks
-      </md-radio-button>
-    </md-radio-group>
-    </div>
-    <div>
-      <h2>{{ 'ui.multiplayertos.rules' | translate }}</h2>
-    </div>
-    <div style="padding-bottom: 10px; display: inline-block; text-align: justify;">
-	  <span bng-translate="ui.multiplayertos.rules.description1"></span>
-	  <a href="http-external://forum.beammp.com/topic/29/rules-please-read" ng-click="openExternalLink('https://forum.beammp.com/topic/29/rules-please-read')">here</a>.
-	  <span bng-translate="ui.multiplayertos.rules.description2"></span>
-	</div>
-    <div style="display: flex">
-      <span style="flex: 1 1;"></span>
-      <md-radio-group ng-model="rules" class="onlineDialogue">
-        <md-radio-button value="enable" class="md-button affirmative" ng-class="{'md-raised': rules === 'enable'}" aria-label="OK">
-          Yes
-        </md-radio-button>
-        <md-radio-button value="disable" class="md-button" ng-class="{'md-raised': rules === 'disable'}" aria-label="NoThanks">
-          No, thanks
-        </md-radio-button>
-      </md-radio-group>
-    </div>
-      <md-divider style="border-color: rgb(62, 62, 62);"></md-divider>
-	  <div style="padding-bottom: 10px; display: inline-block; text-align: justify;">
-	    <span bng-translate="ui.multiplayertos.info1"></span>
-	    <a href="http-external://www.beammp.com" ng-click="openExternalLink('https://www.beammp.com')">official website</a>.
-	    <span bng-translate="ui.multiplayertos.info2"></span>
-	    <a href="http-external://www.discord.gg/beammp" ng-click="openExternalLink('https://www.discord.gg/beammp')">official discord</a>.
-	  </div>
-      <div style="margin-bottom: 1em;margin-top: 1em; display: flex">
-        <span style="flex: 1 1;"></span>
-        <md-button ng-if="(tos != 'disable' && tos != 'enable') || (tos == 'enable' && (rules != 'disable' && rules != 'enable'))" ng-disabled="true" class="md-raised md-primary">
-            Please choose the options above
-        </md-button>
+      <h1>Rules and terms of service</h1>
+
+      <!-- Terms of Service -->
+      <div style="background: var(--bg-secondary); padding: 1em; border-radius: 10px;">
+        <h2>Terms of service</h2>
+        <p>
+          By using BeamMP, you agree to the terms of service. You can read them
+          <a href="http-external://forum.beammp.com/topic/94/terms-of-use-v1-0"
+            ng-click="openExternalLink('https://forum.beammp.com/topic/94/terms-of-use-v1-0')">here</a>.
+        </p>
+
+        <div>
+          <md-radio-group ng-model="tos" class="onlineDialogue" ng-class="" ng-style="" tabindex="false">
+            <md-radio-button value="enable" class="md-button affirmative" ng-class="{'md-raised': tos === 'enable'}"
+              aria-label="OK">
+              Yes
+            </md-radio-button>
+            <md-radio-button value="disable" class="md-button" ng-class="{'md-raised': tos === 'disable'}"
+              aria-label="NoThanks">
+              No, thanks
+            </md-radio-button>
+          </md-radio-group>
+        </div>
+      </div>
+
+      <!-- Rules -->
+      <div style="background: var(--bg-secondary); padding: 1em; border-radius: 10px; margin-top: 1em;">
+        <h2>Rules</h2>
+        <p>
+          By using BeamMP, you agree to the rules. You can read them
+          <a href="http-external://forum.beammp.com/topic/29/rules-please-read"
+            ng-click="openExternalLink('https://forum.beammp.com/topic/29/rules-please-read')">here</a>.
+        </p>
+
+        <div>
+          <md-radio-group ng-model="rules" class="onlineDialogue" ng-class="" ng-style="" tabindex="false">
+            <md-radio-button value="enable" class="md-button affirmative" ng-class="{'md-raised': rules === 'enable'}"
+              aria-label="OK">
+              Yes
+            </md-radio-button>
+            <md-radio-button value="disable" class="md-button" ng-class="{'md-raised': rules === 'disable'}"
+              aria-label="NoThanks">
+              No, thanks
+            </md-radio-button>
+          </md-radio-group>
+        </div>
+      </div>
+
+      <div>
+        <h2>More information</h2>
+        <p>
+          You can find more information on the
+          <a href="http-external://www.beammp.com" ng-click="openExternalLink('https://www.beammp.com')">official
+            website</a>.
+          You can also join the
+          <a href="http-external://www.discord.gg/beammp"
+            ng-click="openExternalLink('https://www.discord.gg/beammp')">official discord</a>.
+        </p>
+      </div>
+
+      <div>
         <md-button ng-click="validate()" ng-if="tos == 'enable' && rules == 'enable'" class="md-raised md-primary">
           {{ 'ui.common.continue' | translate}}
-      </md-button>
-
+        </md-button>
       </div>
     </div>
   </div>
